<resources>
    <string name="app_name">"OpenKeychain"</string>
    <string name="title_encrypt_text">"Encrypt"</string>
    <string name="title_encrypt_files">"Encrypt"</string>
    <string name="title_decrypt">"Decrypt"</string>
    <string name="title_add_subkey">"Add subkey"</string>
    <string name="title_edit_key">"Edit Key"</string>
    <string name="title_preferences">"Settings"</string>
    <string name="title_api_registered_apps">"Apps"</string>
    <string name="title_key_server_preference">"OpenPGP keyservers"</string>
    <string name="title_change_passphrase">"Change Password"</string>
    <string name="title_share_fingerprint_with">"Share fingerprint with…"</string>
    <string name="title_share_key">"Share key with…"</string>
    <string name="title_share_file">"Share file with…"</string>
    <string name="title_share_message">"Share text with…"</string>
    <string name="title_encrypt_to_file">"Encrypt To File"</string>
    <string name="title_decrypt_to_file">"Decrypt To File"</string>
    <string name="title_import_keys">"Import Keys"</string>
    <string name="title_export_key">"Backup Key"</string>
    <string name="title_export_keys">"Backup Keys"</string>
    <string name="title_key_not_found">"Key Not Found"</string>
    <string name="title_send_key">"Upload to Keyserver"</string>
    <string name="title_certify_key">"Confirm Key"</string>
    <string name="title_key_details">"Key Details"</string>
    <string name="title_help">"Help"</string>
    <string name="title_log_display">"Log"</string>
    <string name="title_exchange_keys">"Exchange Keys"</string>
    <string name="title_advanced_key_info">"Extended Information"</string>
    <string name="title_delete_secret_key">"Delete YOUR key '%s'?"</string>
    <string name="title_export_log">"Export Log"</string>
    <string name="title_manage_my_keys">"Manage my keys"</string>
    <string name="section_user_ids">"Identities"</string>
    <string name="section_yubikey">"YubiKey"</string>
    <string name="section_linked_system_contact">"Linked System Contact"</string>
    <string name="section_should_you_trust">"Should you trust this key?"</string>
    <string name="section_proof_details">Proof verification</string>
    <string name="section_cloud_evidence">"Proofs from the cloud"</string>
    <string name="section_keys">"Subkeys"</string>
    <string name="section_cloud_search">"Cloud search"</string>
    <string name="section_passphrase_cache">"Password/PIN Handling"</string>
    <string name="section_proxy_settings">"Proxy Settings"</string>
    <string name="section_gui">"Interface"</string>
    <string name="section_certify">"Confirm"</string>
    <string name="section_actions">"Actions"</string>
    <string name="section_share_key">"Key"</string>
    <string name="section_key_server">"Keyserver"</string>
    <string name="section_fingerprint">"Fingerprint"</string>
    <string name="section_encrypt">"Encrypt"</string>
    <string name="section_decrypt">"Decrypt / Verify"</string>
    <string name="section_current_expiry">"Current expiry"</string>
    <string name="section_new_expiry">"New expiry"</string>
    <string name="btn_decrypt_verify_file">"Decrypt, verify, and save file"</string>
    <string name="btn_encrypt_share_file">"Encrypt and share file"</string>
    <string name="btn_encrypt_save_file">"Encrypt and save file"</string>
    <string name="btn_save_file">"Save file"</string>
    <string name="btn_save">"Save"</string>
    <string name="btn_view_log">"View log"</string>
    <string name="btn_do_not_save">"Cancel"</string>
    <string name="btn_delete">"Delete"</string>
    <string name="btn_no_date">"No Expiry"</string>
    <string name="btn_okay">"Okay"</string>
    <string name="btn_export_to_server">"Upload To Keyserver"</string>
    <string name="btn_next">"Next"</string>
    <string name="btn_back">"Back"</string>
    <string name="btn_no">"No"</string>
    <string name="btn_match">"Fingerprints match"</string>
    <string name="btn_share_encrypted_signed">"Encrypt and share text"</string>
    <string name="btn_copy_encrypted_signed">"Encrypt and copy text"</string>
    <string name="btn_view_cert_key">"View certification key"</string>
    <string name="btn_create_key">"Create key"</string>
    <string name="btn_add_files">"Add file(s)"</string>
    <string name="btn_share_decrypted_text">"Share decrypted text"</string>
    <string name="btn_copy_decrypted_text">"Copy decrypted text"</string>
    <string name="btn_decrypt_clipboard">"Read from clipboard"</string>
    <string name="btn_decrypt_files">"Select input file"</string>
    <string name="btn_encrypt_files">"Encrypt files"</string>
    <string name="btn_encrypt_text">"Encrypt text"</string>
    <string name="btn_add_email">"Add additional email address"</string>
    <string name="btn_unlock">"Unlock"</string>
    <string name="btn_add_keyserver">"Add"</string>
    <string name="btn_save_default">"Save as default"</string>
    <string name="btn_saved">"Saved!"</string>
    <string name="menu_preferences">"Settings"</string>
    <string name="menu_help">"Help"</string>
    <string name="menu_export_key">"Backup to file"</string>
    <string name="menu_delete_key">"Delete key"</string>
    <string name="menu_status">"View key status"</string>
    <string name="menu_manage_keys">"Manage my keys"</string>
    <string name="menu_search">"Search"</string>
    <string name="menu_nfc_preferences">"NFC settings"</string>
    <string name="menu_beam_preferences">"Beam settings"</string>
    <string name="menu_encrypt_to">"Encrypt to…"</string>
    <string name="menu_select_all">"Select all"</string>
    <string name="menu_export_all_keys">"Export all keys"</string>
    <string name="menu_update_all_keys">"Update all keys"</string>
    <string name="menu_advanced">"Extended information"</string>
    <string name="menu_certify_fingerprint">"Confirm via fingerprint comparison"</string>
    <string name="menu_export_log">"Export Log"</string>
    <string name="menu_keyserver_add">"Add"</string>
    <string name="label_message">"Text"</string>
    <string name="label_file">"File"</string>
    <string name="label_files">"File(s)"</string>
    <string name="label_file_colon">"File:"</string>
    <string name="label_no_passphrase">"No Password"</string>
    <string name="label_passphrase">"Password"</string>
    <string name="label_unlock">"Unlocking…"</string>
    <string name="label_passphrase_again">"Repeat Password"</string>
    <string name="label_show_passphrase">"Show Password"</string>
    <string name="label_algorithm">"Algorithm"</string>
    <string name="label_ascii_armor">"File ASCII Armor"</string>
    <string name="label_file_ascii_armor">"Enable ASCII Armor"</string>
    <string name="label_write_version_header">"Let others know that you're using OpenKeychain"</string>
    <string name="label_write_version_header_summary">"Writes 'OpenKeychain v2.7' to OpenPGP signatures, ciphertext, and exported keys"</string>
    <string name="label_use_default_yubikey_pin">"Use default YubiKey PIN"</string>
    <string name="label_use_num_keypad_for_yubikey_pin">Use number keypad for YubiKey PIN</string>
    <string name="label_label_use_default_yubikey_pin_summary">"Uses default PIN (123456) to access YubiKeys over NFC"</string>
    <string name="label_asymmetric_from">"Sign with:"</string>
    <string name="label_to">"Encrypt to:"</string>
    <string name="label_delete_after_encryption">"Delete files after encryption"</string>
    <string name="label_delete_after_decryption">"Delete after decryption"</string>
    <string name="label_encryption_algorithm">"Encryption algorithm"</string>
    <string name="label_hash_algorithm">"Hash algorithm"</string>
    <string name="label_symmetric">"Encrypt with password"</string>
    <string name="label_passphrase_cache_ttl">"Remember time"</string>
    <string name="label_passphrase_cache_subs">"Remember passwords by subkey"</string>
    <string name="label_message_compression">"Text compression"</string>
    <string name="label_file_compression">"File compression"</string>
    <string name="label_keyservers">"Select OpenPGP keyservers"</string>
    <string name="label_key_id">"Key ID"</string>
    <string name="label_key_created">"Key created %s"</string>
    <string name="label_creation">"Creation"</string>
    <string name="label_expiry">"Expiry"</string>
    <string name="label_usage">"Usage"</string>
    <string name="label_key_size">"Key Size"</string>
    <string name="label_ecc_curve">"Elliptic Curve"</string>
    <string name="label_main_user_id">"Primary identity"</string>
    <string name="label_name">"Name"</string>
    <string name="label_comment">"Comment"</string>
    <string name="label_email">"Email"</string>
    <string name="label_send_key">"Synchronize with the cloud"</string>
    <string name="label_fingerprint">"Fingerprint"</string>
    <string name="expiry_date_dialog_title">"Set expiry date"</string>
    <string name="label_keyservers_title">"Keyservers"</string>
    <string name="label_keyserver_settings_hint">"Drag to change order, tap to edit/delete"</string>
    <string name="label_selected_keyserver_title">"Selected keyserver"</string>
    <string name="label_preferred">"preferred"</string>
    <string name="label_enable_compression">"Enable compression"</string>
    <string name="label_encrypt_filenames">"Encrypt filenames"</string>
    <string name="label_hidden_recipients">"Hide recipients"</string>
    <string name="label_verify_keyserver">"Verify keyserver"</string>
    <string name="label_enter_keyserver_url">"Enter keyserver URL"</string>
    <string name="label_keyserver_dialog_delete">"Delete keyserver"</string>
    <string name="label_theme">"Theme"</string>
    <string name="pref_keyserver">"OpenPGP keyservers"</string>
    <string name="pref_keyserver_summary">"Search keys on selected OpenPGP keyservers (HKP protocol)"</string>
    <string name="pref_keybase">"keybase.io"</string>
    <string name="pref_keybase_summary">"Search keys on keybase.io"</string>
    <string name="pref_proxy_tor_title">"Enable Tor"</string>
    <string name="pref_proxy_tor_summary">"Requires Orbot to be installed"</string>
    <string name="pref_proxy_normal_title">"Enable other proxy"</string>
    <string name="pref_proxy_host_title">"Proxy Host"</string>
    <string name="pref_proxy_host_err_invalid">"Proxy host cannot be empty"</string>
    <string name="pref_proxy_port_title">"Proxy Port"</string>
    <string name="pref_proxy_port_err_invalid">"Invalid port number entered"</string>
    <string name="pref_proxy_type_title">"Proxy Type"</string>
    <string name="pref_proxy_type_choice_http">"HTTP"</string>
    <string name="pref_proxy_type_choice_socks">"SOCKS"</string>
    <string name="pref_proxy_type_value_http">"proxyHttp"</string>
    <string name="pref_proxy_type_value_socks">"proxySocks"</string>
    <string name="orbot_ignore_tor">"Don\'t use Tor"</string>
    <string name="orbot_install_dialog_title">Install Orbot to use Tor?</string>
    <string name="orbot_install_dialog_install">"Install"</string>
    <string name="orbot_install_dialog_content">You must have Orbot installed and activated to proxy traffic through it. Would you like to install it?</string>
    <string name="orbot_install_dialog_cancel">"Cancel"</string>
    <string name="orbot_install_dialog_ignore_tor">"Don\'t use Tor"</string>
    <string name="cap_title_confirm">Confirm Keys</string>
    <string name="cap_title_sign">Sign Messages</string>
    <string name="cap_title_decrypt">Decrypt Messages</string>
    <string name="cap_cert_ok">"This key can confirm other keys."</string>
    <string name="cap_sign_divert">"This key can sign messages, using a YubiKey."</string>
    <string name="cap_decrypt_unavailable">"This key is stripped, it can NOT decrypt messages."</string>
    <string name="caption_secret_status">This key is yours, and can be used for the following things:</string>
</resources>