<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/tools_vertlin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/caption_secret_status" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/cap_cert_icon"
            android:src="@drawable/ic_action_verified_cutout_24dp"
            tools:tint="@color/android_green_light"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/cap_title_confirm" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/cap_cert_text"
                tools:text="@string/cap_cert_ok" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/cap_cert_yubi"
            android:src="@drawable/yubi_icon_24dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:visibility="gone"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/cap_sign_icon"
            android:src="@drawable/ic_mode_edit_white_24dp"
            tools:tint="@color/android_green_light"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/cap_sign_caption"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/cap_title_sign" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/cap_sign_text"
                tools:text="@string/cap_sign_divert" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/cap_sign_yubi"
            android:src="@drawable/yubi_icon_24dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:visibility="gone"
            tools:visibility="visible"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/cap_decrypt_icon"
            android:src="@drawable/ic_lock_white_24dp"
            tools:tint="@color/android_red_light"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/cap_title_decrypt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/cap_decrypt_text"
                tools:textColor="@color/android_red_light"
                tools:text="@string/cap_decrypt_unavailable" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/cap_decrypt_yubi"
            android:src="@drawable/yubi_icon_24dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:visibility="gone"
            />

    </LinearLayout>

</merge>
